# Captain-Trade

./: .env.example  .gitignore  FINMIND_SPONSOR_PREMIUM_PLAN.md  FUTURE_FEATURES.md  PROJECT_FILE_AUDIT_2026-04-20.md  SYSTEM_AUDIT_AND_MANUAL_SYNC_PLAN.md  app.py  config.toml  pyproject.toml  requirements.txt  srock-up.bat  sync_to_notion.py  telegram_bot.py  webhook.py  使用說明手冊.md
.streamlit/: secrets.example.toml
agents/: reviewer.py
broker/: __init__.py  shioaji_adapter.py
data/: cache_health_registry.py  data_source.py  finmind_capability_map.py  finmind_client.py  llm_client.py  yahoo_client.py
db/: broker_cache.py  cache_health.py  database.py  etf_cache.py  event_log.py  fetch_timing.py  fundamental_cache.py  holding_shares_cache.py  inst_cache.py  margin_cache.py  models.py  price_cache.py  risk_flags_cache.py  scan_history.py  settings.py  telegram_members.py
modules/: auth.py  backtester.py  cache_health_runtime.py  cache_health_service.py  cache_health_worker.py  etf_scraper.py  etf_tracker.py  indicators.py  intraday_monitor.py  journal.py  portfolio.py  portfolio_io.py  risk.py  scanner.py  trade_plan.py  worker_runtime.py
notifications/: line_notify.py  telegram_notify.py
pages/: 0_📖_Wiki.py  10_問題回報.py  11_事件日誌.py  12_Broker市場輔助.py  1_選股雷達.py  2_持股監控.py  3_風險控制.py  4_交易計畫.py  4_市場環境.py  5_交易日誌.py  5_市場環境.py  6_回測模組.py  6_資料管理.py  7_個股分析.py
ref/: 0050.py  00981A.py  00982A_00992A.py  00991A.py  design_yahoo_bridge.md  event_log_design.md  event_log_implementation_plan.md  finmind_api_spec.md  finmind_batch_capability_summary_v2.md  (+8 more)
(+54 files in other folders)
