[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "srock"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "bcrypt>=4.0",
    "psutil>=5.9",
    "tomli>=2.0",
]

[project.scripts]
srock = "srock.cli:app"

[tool.setuptools.packages.find]
include = ["srock*"]
